<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/greybg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="@dimen/size_10"
            android:padding="@dimen/size_20"
            android:text="@string/area"
            android:textSize="@dimen/text_20" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card">

        <ImageView
            android:layout_width="@dimen/size_120dip"
            android:layout_height="@dimen/size_100dip"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/size_10"
            android:layout_weight="1"
            android:background="@color/light_gray" />

        <ImageView
            android:layout_width="@dimen/size_120dip"
            android:layout_height="@dimen/size_100dip"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/size_10"
            android:layout_weight="1"
            android:background="@color/light_gray" />
    </LinearLayout>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_gray"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/size_10"
                android:layout_weight="0.6"
                android:text="@string/land_detail"
                android:textSize="@dimen/text_20"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/size_10"
                android:drawableLeft="@drawable/call"
                android:text="9999999999"
                android:textSize="@dimen/text_20" />

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size_20"
            android:layout_marginLeft="@dimen/size_10"
            android:background="@drawable/select" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_gray"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/light_gray"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/size_10"
                    android:ems="7"
                    android:text="@string/location"
                    android:textSize="@dimen/text_15" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/colon"
                    android:textSize="@dimen/text_15" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/size_10"
                    android:text="@string/location"
                    android:textSize="@dimen/text_15" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/light_gray"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/size_10"
                    android:ems="7"
                    android:text="@string/propety_type"
                    android:textSize="@dimen/text_15" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/colon"
                    android:textSize="@dimen/text_15" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/size_10"
                    android:text="@string/propety_type"
                    android:textSize="@dimen/text_15" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/light_gray"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/size_10"
                    android:ems="7"
                    android:text="@string/direction"
                    android:textSize="@dimen/text_15" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/colon"
                    android:textSize="@dimen/text_15" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/size_10"
                    android:text="@string/direction"
                    android:textSize="@dimen/text_15" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/light_gray"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/size_10"
                    android:ems="7"
                    android:text="@string/description"
                    android:textSize="@dimen/text_15" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/colon"
                    android:textSize="@dimen/text_15" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/size_10"
                    android:text="@string/description"
                    android:textSize="@dimen/text_15" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_10"
            android:background="@color/light_gray"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/size_10"
                android:layout_weight="0.6"
                android:text="@string/other"
                android:textSize="@dimen/text_20"

                />
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size_10"
            android:layout_marginLeft="@dimen/size_10"
            android:background="@drawable/select" />
        <include layout="@layout/address_cell" />
    </LinearLayout>

</ScrollView>

</LinearLayout>