<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_dashboard"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_20"
            android:layout_marginRight="@dimen/size_20"
            android:textSize="@dimen/text_15"
            android:textColor="@color/white_text"
            android:text="@string/District" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size_10"
            android:layout_marginLeft="@dimen/size_20"
            android:layout_marginRight="@dimen/size_20"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/sp_district"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:spinnerMode="dropdown"
                android:prompt="@string/District" />



            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/size_10"
                android:layout_gravity="center"
                android:src="@drawable/tri" />

        </RelativeLayout>

       <!-- <Spinner
            android:id="@+id/sp_district"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size_10"
            android:layout_marginLeft="@dimen/size_20"
            android:layout_marginRight="@dimen/size_20"
            android:prompt="@string/District" />
-->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_20"
            android:layout_marginRight="@dimen/size_20"
            android:layout_marginBottom="@dimen/size_30"
            android:background="@drawable/select" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_20"
            android:layout_marginRight="@dimen/size_20"
            android:textColor="@color/white_text"
            android:textSize="@dimen/text_15"
            android:text="@string/city_village" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size_10"
            android:layout_marginLeft="@dimen/size_20"
            android:layout_marginRight="@dimen/size_20"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/sp_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:spinnerMode="dropdown"
                android:prompt="@string/city_village" />



            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/size_10"
                android:layout_gravity="center"
                android:src="@drawable/tri" />

        </RelativeLayout>
        <!--<Spinner
            android:id="@+id/sp_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size_10"
            android:layout_marginLeft="@dimen/size_20"
            android:layout_marginRight="@dimen/size_20"
            android:prompt="@string/city_village" />
-->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_20"
            android:layout_marginRight="@dimen/size_20"
            android:layout_marginBottom="@dimen/size_30"
            android:background="@drawable/sep" />
        <Button
            android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_20"
            android:layout_marginRight="@dimen/size_20"
            android:background="@drawable/submit"
            android:layout_gravity="center_horizontal"
            android:text="@string/submit"
            android:textSize="@dimen/text_15"
            android:textColor="@color/white_text"/>
    </LinearLayout>

</LinearLayout>